# serial_test

./: .gitmodules  CMakeLists.txt
src/: _main.cpp  main.cpp
udev_rules/: 60-NWRC-udev.rules
